--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raju Lamsal - CV </title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Raju Lamsal - CV</title>
+    <meta name="description" content="The professional CV of Raju Lamsal, a Software Engineer based in Brisbane, Australia.">
+    <meta name="keywords" content="Raju Lamsal, Software Engineer, CV, Resume, Brisbane, Australia">
+    <meta name="author" content="Raju Lamsal">
+
+    <!-- Open Graph (OG) Tags -->
+    <meta property="og:title" content="Raju Lamsal - CV">
+    <meta property="og:description" content="The professional CV of Raju Lamsal, a Software Engineer based in Brisbane, Australia.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://yourwebsite.com">
+    <meta property="og:image" content="http://yourwebsite.com/path/to/image.jpg">
+
+    <!-- Favicon -->
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel=" stylesheet" href="assets/css/style.css" />
 </head>
 <body>
     <hr />
